Add layout and register page

--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.3",
     "@chakra-ui/icons": "^1.0.0-rc.3",
+    "formik": "^2.1.5",
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
