--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
