--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.3",
     "@chakra-ui/icons": "^1.0.0-rc.3",
+    "@urql/exchange-graphcache": "^3.1.1",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "next": "latest",
