--- a/server/package.json
+++ b/server/package.json
@@ -7,16 +7,22 @@
     "watch": "tsc --watch",
     "dev": "nodemon ./dist",
     "start": "node ./dist",
-    "migrate": "mikro-orm migration:create"
+    "migrate": "mikro-orm migration:create",
+    "test:setup": "ts-node ./src/test-utils/setup.ts",
+    "pretest": "yarn test:setup",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/connect-redis": "^0.0.14",
     "@types/express-session": "^1.17.0",
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.11.1",
     "@types/redis": "^2.8.27",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
+    "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
