--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "latest",
+    "next": "^9.5.3",
     "next-urql": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -25,11 +25,12 @@
     "@graphql-codegen/cli": "1.17.8",
     "@graphql-codegen/typescript": "1.17.8",
     "@graphql-codegen/typescript-operations": "1.17.8",
-    "@graphql-codegen/typescript-react-apollo": "1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "1.17.7",
     "@graphql-codegen/typescript-urql": "^2.0.1",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "cypress": "^5.3.0",
     "typescript": "4.0.2"
   },
   "license": "MIT"
