move jest config to package json

--- a/server/package.json
+++ b/server/package.json
@@ -47,5 +47,9 @@
       "./src/mikro-orm.config.ts",
       "./dist/mikro-orm.config.js"
     ]
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
