--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@mikro-orm/cli": "^4.0.4",
     "@mikro-orm/core": "^4.0.4",
     "@mikro-orm/postgresql": "^4.0.4",
+    "@types/faker": "^5.1.2",
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
