--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "faker": "^5.1.0",
     "graphql": "^15.3.0",
     "pg": "^8.3.3",
     "redis": "^3.0.2",
