--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
     "watch": "tsc --watch",
     "dev": "nodemon ./dist",
     "start": "node ./dist",
-    "migrate": "mikro-orm migration:create",
     "test:cleanup": "ts-node ./src/test-utils/cleanup.ts",
     "pretest": "yarn test:cleanup",
     "test": "jest",
@@ -29,9 +28,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.0.4",
-    "@mikro-orm/core": "^4.0.4",
-    "@mikro-orm/postgresql": "^4.0.4",
     "@types/faker": "^5.1.2",
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.0",
@@ -43,14 +39,8 @@
     "graphql": "^15.3.0",
     "pg": "^8.3.3",
     "redis": "^3.0.2",
-    "type-graphql": "^1.0.0"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
+    "type-graphql": "^1.0.0",
+    "typeorm": "^0.2.28"
   },
   "jest": {
     "preset": "ts-jest",
