--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/core": "^1.0.0-rc.3",
     "@chakra-ui/icons": "^1.0.0-rc.3",
     "@urql/exchange-graphcache": "^3.1.1",
+    "faker": "^5.1.0",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "isomorphic-unfetch": "^3.0.0",
@@ -28,6 +29,7 @@
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-react-apollo": "1.17.7",
     "@graphql-codegen/typescript-urql": "^2.0.1",
+    "@types/faker": "^5.1.2",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
