--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
+    "react-textarea-autosize": "^8.2.0",
     "urql": "^1.10.1"
   },
   "devDependencies": {
