--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.5.3",
     "next-urql": "^1.1.0",
+    "query-string": "^6.13.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
