--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.3",
     "@chakra-ui/icons": "^1.0.0-rc.3",
+    "@types/react-resize-detector": "^5.0.0",
     "@urql/exchange-graphcache": "^3.1.1",
     "faker": "^5.1.0",
     "formik": "^2.1.5",
@@ -22,6 +23,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
+    "react-resize-detector": "^5.2.0",
     "react-textarea-autosize": "^8.2.0",
     "urql": "^1.10.1"
   },
