--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "query-string": "^6.13.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-is": "^16.13.1",
     "react-resize-detector": "^5.2.0",
     "react-textarea-autosize": "^8.2.0",
