--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "tsc --watch",
     "dev": "nodemon ./dist",
-    "start": "node ./dist",
+    "build": "tsc",
+    "start": "NODE_ENV='production' node ./dist",
     "test:cleanup": "ts-node ./src/test-utils/cleanup.ts",
     "pretest": "yarn test:cleanup",
     "test": "jest",
@@ -16,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/connect-redis": "^0.0.14",
+    "@types/dotenv-safe": "^8.1.1",
     "@types/express-session": "^1.17.0",
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
@@ -33,6 +35,7 @@
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "faker": "^5.1.0",
