--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV='production' node src/server.js",
     "gen": "graphql-codegen --config codegen.yml",
     "test": "cypress open"
   },
