Update example file

--- a/web/.env.production.local.EXAMPLE
+++ b/web/.env.production.local.EXAMPLE
@@ -3,4 +3,4 @@ NEXT_PUBLIC_CLOUDINARY_SECRET=EFVY34IEI5_FLEvyufvsfyvsueyv
 PRIVATE_KEY_PATH=/etc/letsencrypt/live/lireddit.ml/privatekey.pem
 CERTIFICATE_PATH=/etc/letsencrypt/live/lireddit.ml/certificate.pem
 DOMAIN=lireddit.ml
-NEXT_PUBLIC_GRAPHQL_ENDPOINT=https://lireddit.ml:4000/graphql
+NEXT_PUBLIC_GRAPHQL_ENDPOINT=https://lireddit.ml/graphql
